<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_one_year_ago">about 1 year ago</string>
    <string name="account_deletion">Delete My Account</string>
    <string name="account_deletion_acknowledge">I understand account deletion is permanent and cannot be reversed.</string>
    <string name="account_deletion_active_subscription">You have an Active Subscription.</string>
    <string name="account_deletion_cancel_subscription">Cancel Subscription</string>
    <string name="account_deletion_continue">Continue</string>
    <string name="account_deletion_copy_part_1">"Account deletion is permanent and cannot be reversed. "</string>
    <string name="account_deletion_copy_part_10">"Understand your privacy. "</string>
    <string name="account_deletion_copy_part_11">"This request is separate from any other data privacy rights you may have given your residency. To see a full profile of your data control rights and additional actions you can take, please refer to our "</string>
    <string name="account_deletion_copy_part_2">"If you delete your account, you'll lose access to it, in addition to any information associated with it - including watchlists, watch history, playhead positions, and other user generated content.

"</string>
    <string name="account_deletion_copy_part_3">"Account deletion "</string>
    <string name="account_deletion_copy_part_4">"IS NOT "</string>
    <string name="account_deletion_copy_part_5">"a subscription cancellation. "</string>
    <string name="account_deletion_copy_part_6">"Account deletion is a privacy feature that gives you more control over your data. If you delete your account, you'll still be a subscribed Crunchyroll user. "</string>
    <string name="account_deletion_copy_part_7">Canceling your subscription is an additional step</string>
    <string name="account_deletion_copy_part_8">".

If you want to unsubscribe from Crunchyroll and you signed up through the app, you can cancel your subscription through your Android device. If you subscribed a different way, please "</string>
    <string name="account_deletion_copy_part_9">" for cancelation instructions.

"</string>
    <string name="account_deletion_cta_text">Continue to Account Deletion</string>
    <string name="account_deletion_customer_support">Customer Support</string>
    <string name="account_deletion_delete">Delete Account</string>
    <string name="account_deletion_dialog_cancel_subscription_header">Confirm Cancellation</string>
    <string name="account_deletion_dialog_cancel_subscription_message">I understand by cancelling my subscription, I will lose access to ad-free viewing and other Premium perks.</string>
    <string name="account_deletion_dialog_cancel_subscription_negative_button">Not Now</string>
    <string name="account_deletion_dialog_cancel_subscription_positive_button">Confirm</string>
    <string name="account_deletion_dialog_copy">You must cancel your subscription before deleting your account. If you have done so already, are you sure you want to delete your account?</string>
    <string name="account_deletion_dialog_discard_reason_header">Discard your reason?</string>
    <string name="account_deletion_dialog_discard_reason_negative_button">Discard</string>
    <string name="account_deletion_dialog_discard_reason_positive_button">Keep writing</string>
    <string name="account_deletion_having_trouble">Having trouble? Contact %1$s</string>
    <string name="account_deletion_more_info_optional">More info (optional)</string>
    <string name="account_deletion_must_cancel_before_delete">You must cancel your subscription in order to delete your account.</string>
    <string name="account_deletion_next_step_message">You will be asked to verify your email in the next step.</string>
    <string name="account_deletion_not_now">Not now</string>
    <string name="add_password">Add Password</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="amazon_create_account_label">To create an account please visit</string>
    <string name="artist_no_videos_explore_cta">Explore our library</string>
    <string name="artist_no_videos_subtitle">"We don't have videos for this artist yet. The good news? We're adding videos to our library every day."</string>
    <string name="artist_no_videos_title">Check Back Soon!</string>
    <string name="billing_signing_header_title">To sign up for %s, log in or create a new account first.</string>
    <string name="category_app_experience">App Experience</string>
    <string name="category_offline_viewing">Downloads</string>
    <string name="category_preferences">Preferences</string>
    <string name="category_privacy">Privacy</string>
    <string name="category_support">Support</string>
    <string name="connected_apps_screen_title">Connected Apps</string>
    <string name="content_restrictions">Content Restrictions</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_link">crunchyroll.com/create-account</string>
    <string name="crunchylist_add_series_to_this_crunchylist">Add to this Crunchylist by searching for a series or from an anime’s page.</string>
    <string name="crunchylist_is_empty">Your Crunchylist is Empty</string>
    <string name="crunchylist_need_help">Need help? Start with our most %s.</string>
    <string name="crunchylist_search_for_anime">Search for anime</string>
    <string name="do_not_sell_my_personal_information">"Don't Sell/Share my personal information."</string>
    <string name="email">Email</string>
    <string name="key_account_deletion">account_deletion</string>
    <string name="key_add_password">add_password</string>
    <string name="key_add_phone_number">add_phone_number</string>
    <string name="key_category_offline_viewing">category_offline_viewing</string>
    <string name="key_category_privacy">category_privacy</string>
    <string name="key_change_email">change_email</string>
    <string name="key_change_password">change_password</string>
    <string name="key_change_phone">change_phone</string>
    <string name="key_connected_apps">connected_apps</string>
    <string name="key_content_restrictions">content_restrictions</string>
    <string name="key_do_not_sell">do_not_sell_my_personal_information</string>
    <string name="key_log_out">log_out</string>
    <string name="key_maturity_restrictions">maturity_restrictions</string>
    <string name="key_membership_plan">membership_plan</string>
    <string name="key_need_help">need_help</string>
    <string name="key_notifications">notifications</string>
    <string name="key_persistent_message_center">persistent_message_center</string>
    <string name="key_phone">phone</string>
    <string name="key_preferred_audio_language">preferred_audio_language</string>
    <string name="key_preferred_subtitle_cc_language">preferred_subtitle_cc_language</string>
    <string name="key_show_closed_captions">show_closed_captions</string>
    <string name="key_show_mature_content">show_mature_content</string>
    <string name="key_switch_profile">switch_profiles</string>
    <string name="key_switch_stream_over_cellular">stream_over_cellular</string>
    <string name="key_switch_sync_over_cellular">sync_over_cellular</string>
    <string name="key_sync_quality">sync_quality</string>
    <string name="key_whatsapp_help">whatsapp_help</string>
    <string name="label_notification_settings">Notification Settings</string>
    <string name="mature_content">Mature Content</string>
    <string name="maturity_restrictions">Maturity Restrictions</string>
    <string name="membership">Membership</string>
    <string name="migration_crunchyroll_account_created_premium_access">Your Crunchyroll account has been created. You now have Premium access to Crunchyroll due to your Funimation subscription.</string>
    <string name="migration_premium_member">Premium member</string>
    <string name="migration_use_fun_credentials">Moving forward, please use your Funimation username and password to access your content on all Crunchyroll apps.</string>
    <string name="migration_watch_data_free_fn_user_description">Your Watchlist and History are on the way over. In the meantime, enjoy the world’s largest anime library!</string>
    <string name="migration_watch_data_free_fn_user_title">Watch data</string>
    <string name="migration_welcome_to_your_new_anime_home">Welcome to Your New Anime Home!</string>
    <string name="need_help">Need Help?</string>
    <string name="password">Password</string>
    <string name="persistent_message_center_notifications">Notifications</string>
    <string name="phone">Phone</string>
    <string name="preferred_audio_language">Audio Language</string>
    <string name="preferred_subtitle_cc_language">Subtitles/CC Language</string>
    <string name="show_closed_captions">Show Closed Captions</string>
    <string name="sign_in_forgot_password">Forgot Password?</string>
    <string name="sign_in_session_expired">Your session has expired. Please log in.</string>
    <string name="sign_in_user_phone_number_hint">Phone Number</string>
    <string name="sign_out">Log Out</string>
    <string name="sign_up_log_in">Log In</string>
    <string name="sign_up_opt_in_marketing_notifications">I want all the latest Crunchyroll info, offers, and news.</string>
    <string name="stream_over_cellular">Stream Using Cellular</string>
    <string name="subscription">Subscription</string>
    <string name="switch_profile">Switch Profile</string>
    <string name="sync_over_cellular">Download Using Cellular</string>
    <string name="sync_quality">Download Quality</string>
    <string name="vertical_bar">|</string>
    <string name="whatsapp_help">Get Support on WhatsApp</string>
</resources>