<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:background="@color/black" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="16.0dip" android:paddingEnd="16.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="160.0dip" android:layout_height="160.0dip" android:src="@drawable/crunchylist_empty_list" />
    <TextView android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/crunchylist_is_empty" style="@style/Subheader1LatoSemibold" />
    <TextView android:textColor="@color/silver" android:gravity="center" android:layout_width="328.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/crunchylist_add_series_to_this_crunchylist" style="@style/BodyLatoMedium" />
    <Button android:id="@id/empty_crunchylist_search_button" android:layout_width="328.0dip" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:minWidth="@dimen/wrap_content" android:text="@string/crunchylist_search_for_anime" style="@style/PrimaryButton" />
    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/empty_crunchylist_popular_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/crunchylist_need_help" style="@style/BodyLatoMedium" />
</LinearLayout>