<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="16.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textColor="@color/white" android:gravity="center_horizontal" android:id="@id/migration_welcome_text" android:layout_width="@dimen/migration_section_description_width" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/migration_welcome_to_your_new_anime_home" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Headline1Lato" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/cr_honey_gold" android:id="@id/membership_type_text" android:layout_width="@dimen/migration_section_description_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/free_fn_membership_section_title_margin_top" android:text="@string/migration_premium_member" android:drawablePadding="6.0dip" android:textAllCaps="true" app:drawableStartCompat="@drawable/ic_crown_small" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/migration_welcome_text" style="@style/BodyLatoSemibold" />
    <TextView android:textColor="@color/white" android:id="@id/crunchyroll_account_created_text" android:layout_width="@dimen/migration_section_description_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/free_fn_membership_section_description_margin_top" android:text="@string/migration_crunchyroll_account_created_premium_access" style="@style/BodyLatoMedium" />
    <TextView android:textColor="@color/white" android:id="@id/use_fun_credentials_text" android:layout_width="@dimen/migration_section_description_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/free_fn_membership_section_description_margin_top" android:text="@string/migration_use_fun_credentials" style="@style/BodyLatoMedium" />
    <LinearLayout android:orientation="vertical" android:id="@id/migration_benefits_container" android:layout_width="@dimen/migration_section_description_width" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" />
    <TextView android:textColor="@color/cr_silver_chalice" android:id="@id/watch_data_title" android:layout_width="@dimen/migration_section_description_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/free_fn_membership_section_title_margin_top" android:text="@string/migration_watch_data_free_fn_user_title" android:textAllCaps="true" style="@style/BodyLatoSemibold" />
    <TextView android:textColor="@color/white" android:id="@id/watch_data_description" android:paddingBottom="@dimen/migration_content_margin_bottom" android:layout_width="@dimen/migration_section_description_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/free_fn_membership_section_description_margin_top" android:text="@string/migration_watch_data_free_fn_user_description" style="@style/BodyLatoMedium" />
</LinearLayout>