<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/container" android:clipToPadding="false" android:descendantFocusability="beforeDescendants" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/sign_up_padding_horizontal" android:paddingEnd="@dimen/sign_up_padding_horizontal"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.ellation.widgets.switcher.SwitcherLayout android:id="@id/phone_and_email_switcher" android:visibility="gone" android:layout_width="@dimen/signing_container_width" android:layout_height="wrap_content" app:default_textColor="@color/cr_silver_chalice" app:highlighted_textColor="@color/white" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:orientation="vertical" android:id="@id/sign_up_panel" android:focusableInTouchMode="true" android:layout_width="@dimen/signing_container_width" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/phone_and_email_switcher">
        <com.ellation.widgets.input.email.EmailInputView android:id="@id/email" android:nextFocusDown="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" android:autofillHints="emailAddress" android:importantForAutofill="no" app:hint_text="@string/email" />
        <com.ellation.widgets.input.password.PasswordInputView android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:inputType="textPassword" android:autofillHints="newPassword" android:importantForAutofill="no" app:hint_text="@string/password" />
        <com.ellation.widgets.input.phonenumber.PhoneNumberInputView android:id="@id/phone_number" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="phone" app:hint_text="@string/sign_in_user_phone_number_hint" />
        <CheckBox android:id="@id/sign_up_opt_in_marketing_notifications_checkbox" android:background="?selectableItemBackground" android:paddingTop="@dimen/sign_up_opt_in_vertical_padding" android:paddingBottom="@dimen/sign_up_opt_in_vertical_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sign_up_opt_in_margin_top" android:text="@string/sign_up_opt_in_marketing_notifications" android:paddingStart="@dimen/default_padding" android:paddingEnd="0.0dip" style="@style/OptInCheckbox" />
        <TextView android:id="@id/tos" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sign_up_tos_email_margin_top" style="@style/AppLegalInfoTextStyle" />
        <com.ellation.widgets.input.datainputbutton.DataInputButton android:id="@id/sign_up_button" android:layout_width="fill_parent" android:layout_height="@dimen/button_primary_height" android:layout_marginTop="@dimen/sign_up_cta_button_margin_top" android:layout_marginBottom="@dimen/sign_up_cta_button_margin_bottom" android:text="@string/create_account" style="@style/ButtonStyleLarge" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/color_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/already_have_an_account" style="@style/SignUpAlternativeLinkText" />
            <TextView android:textColor="@color/primary" android:id="@id/sign_in" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_up_log_in" android:paddingStart="5.0dip" style="@style/SignUpAlternativeLinkText" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>