<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/billing_title_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="42.0dip" android:layout_marginEnd="42.0dip">
        <ImageView android:layout_gravity="top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_crown" android:layout_marginEnd="8.0dip" />
        <TextView android:textColor="@color/cr_honey_gold" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/billing_header_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/billing_signing_header_title" style="@style/Subheader1LatoSemibold" />
    </LinearLayout>
    <TextView android:textColor="@color/silver" android:layout_gravity="center_horizontal" android:id="@id/session_expired_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/sign_in_session_expired" style="@style/Subheader1LatoSemibold" />
    <TextView android:textColor="@color/silver" android:id="@id/sign_in_to_create_account_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/amazon_create_account_label" style="@style/Subheader1LatoSemibold" />
    <TextView android:textColor="@color/white" android:id="@id/sign_in_amazon_create_account_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_account_link" style="@style/Subheader1LatoSemibold" />
</LinearLayout>