<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="160.0dip" android:src="@drawable/artist_no_music_videos" />
    <TextView android:textColor="@color/white" android:layout_width="@dimen/artist_explore_library_cta_width" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/artist_no_videos_title" android:includeFontPadding="false" android:textAlignment="center" style="@style/EmptyLayoutHeaderStyle" />
    <TextView android:textColor="@color/cr_silver" android:layout_width="@dimen/artist_explore_library_cta_width" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/artist_no_videos_subtitle" android:includeFontPadding="false" android:textAlignment="center" style="@style/BodyLatoMedium" />
    <TextView android:id="@id/explore_library_cta" android:layout_width="@dimen/artist_explore_library_cta_width" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/artist_no_videos_explore_cta" android:includeFontPadding="true" android:textAllCaps="true" style="@style/PrimaryButton" />
</LinearLayout>